--- a/front/html/todo.html
+++ b/front/html/todo.html
@@ -27,9 +27,9 @@
 
         <div class="task-add">
 
-            <label for="addTodo" class="task-text taks-add__input">
+            <label for="addTodo" class="task-add__input task-text">
                 <input type="text" placeholder="&nbsp;" id="addTodo">
-                <span class="task-text__placeholder">Search</span>
+                <span class="task-text__placeholder">New Task</span>
                 <span class="task-text__border"></span>
             </label>
             <button class="task-add__button button--primary">
@@ -37,37 +37,38 @@
             </button>
         </div>
 
+        <div class="task-list">
+            <div class="todo-items">
+                <h3 class="todo-items__header header--primary">
+                    Do
+                </h3>
 
-        <div class="todo-items">
-            <h3 class="todo-items__header header--primary">
-                Do
-            </h3>
+                <ul class="todo-items__list">
+                    <li class="todo-items__item">
+                        task1
+                    </li>
+                    <li class="todo-items__item">
+                        task2
+                    </li>
+                </ul>
+            </div>
 
-            <ul class="todo-items__list">
-                <li class="todo-items__item">
-                    task1
-                </li>
-                <li class="todo-items__item">
-                    task2
-                </li>
-            </ul>
+            <div class="todo-items">
+                <h3 class="todo-items__header header--secondary">
+                    Done
+                </h3>
+
+                <ul class="todo-items__list">
+                    <li class="todo-items__item">
+                        task1
+                    </li>
+                    <li class="todo-items__item">
+                        task2
+                    </li>
+                </ul>
+            </div>
+
         </div>
-
-        <div class="todo-items">
-            <h3 class="todo-items__header header--secondary">
-                Done
-            </h3>
-
-            <ul class="todo-items__list">
-                <li class="todo-items__item">
-                    task1
-                </li>
-                <li class="todo-items__item">
-                    task2
-                </li>
-            </ul>
-        </div>
-
     </main>
 </body>
 </html>
